--- a/ADMINISTRATION_BASE_DE_DONNEES/Site/Contact/contact.css
+++ b/ADMINISTRATION_BASE_DE_DONNEES/Site/Contact/contact.css
@@ -1,31 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>MENTALHEAL Contact</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-</head>
-<body>
-<section class="home">
-            <div class="home-content">
-        <h1>How are you today !</h1>
-            </div>
-</section>
-  <div class="wrapper">
-      <form action="">
-         <h2>CONTACT US</h2>
-         <div class="input-box">
-              <button type="submit" class="btn">Facebook</button>
-              <button type="submit" class="btn">Instagram</button>
-         </div>
-	
-      </form>
-  </div>
-  
-</body>
-
-<style>
-     @import url("https://fonts.googleleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+/* @import url("https://fonts.googleleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"); */
 
 * {
     margin: 0;
@@ -39,9 +12,88 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh; 
-    background: url(jj.jpg) no-repeat;
+    background: url(image_contact.jpg) no-repeat;
     background-size: cover;
     background-position: center;
+}
+
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 10%;
+    display: flex;
+    align-items: center;
+    z-index: 99%;   
+}    
+
+.logo {
+    font-size: 25px;
+    color: white;
+    user-select: none;
+    text-align: start;
+
+}
+
+.navigation a {
+    position: relative;
+    font-size: 18px;
+    color: white;
+    text-decoration: none;
+    font-weight: 300px;
+    margin-left: 35px;
+}
+.navigation a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 100%;
+    height: 3px;
+    background: white;
+    border-radius: 5px;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .5s;
+}
+
+.navigation a::after::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 100%;
+    height: 3px;
+    background: white;
+    border-radius: 5px;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .5s;
+}
+.navigation a:hover::after {
+    transform-origin: left;
+     transform: scaleX(1);
+}
+.navigation .btnlogin_popup{
+    width: 130px;
+    height: 50px;
+    background: transparent;
+    border: 2px solid white;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1.1em;
+    color: white;
+    font-weight: 500;
+    margin-left: 40px;
+    transition: .5s;
+    align-items: end;
+}
+.navigation .btnlogin_popup:hover {
+   background: white; 
+   color:gray;
 }
 
 .home{ 
@@ -121,9 +173,3 @@ body {
     font-weight: 300px;
     
 }
-
-
-
-
-</style>
-</html>
