--- a/ADMINISTRATION_BASE_DE_DONNEES/Site/Login/login.css
+++ b/ADMINISTRATION_BASE_DE_DONNEES/Site/Login/login.css
@@ -1,71 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, 
-                         initial-scale=1.0">
-</head>
- 
-<body>
-    <header>
-        <h1 class="heading">LOGIN</h1>
-    </header>
 
-    <div class="container">
-        <div class="slider"></div>
-        <div class="btn">
-            <button class="login">Login</button>
-            <button class="signup">Register</button>
-        </div>
- 
-        <div class="form-section">
- 
-            
-            <form action="../src/handler/login-handler.php" method="post">
-                <div class="login-box">
-                        <input type="text"
-                               class="username ele"
-                               placeholder="username"
-                               name = "log_username">
-                        <input type="password"
-                               class="password ele"
-                               placeholder="password"
-                               name = "log_password">
-                        <button class="clkbtn">Login</button>
-                </div>
-            </form>
- 
-            
-            <form action="../src/handler/register-handler.php" method="post">
-                <div class="signup-box">
-                    <input type="text"
-                           class="name ele"
-                           placeholder="username"
-                           name="username">
-                    <input type="email"
-                           class="email ele"
-                           placeholder="youremail@email.com"
-                           name="email">
-                    <input type="password"
-                           class="password ele"
-                           placeholder="password"
-                           name="password">
-                    <input type="password"
-                           class="password ele"
-                           placeholder="Confirm password"
-                           name="password2">
-                    <button class="clkbtn">Signup</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</body>
-</html>
-
-<style>
-   @import url(
-"https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"); */
  
 * {
     margin: 0;
@@ -82,23 +16,108 @@ body {
     align-items: center;
     flex-direction: column;
     gap: 30px;
-    background: url(gg.jpg) no-repeat;
+    background: url(image_login.jpg) no-repeat;
     background-size: cover;
     background-position: center;
 }
  
+
 header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 10%;
+    display: flex;
+    align-items: center;
+    z-index: 99%;
+    
+    
+}
+.logo {
+    font-size: 25px;
+    color: white;
+    user-select: none;
+    text-align: start;
+
+}
+
+.navigation a {
+    position: relative;
+    font-size: 18px;
+    color: white;
+    text-decoration: none;
+    font-weight: 300px;
+    margin-left: 35px;
+}
+.navigation a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 100%;
+    height: 3px;
+    background: white;
+    border-radius: 5px;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .5s;
+}
+
+.navigation a::after::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 100%;
+    height: 3px;
+    background: white;
+    border-radius: 5px;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .5s;
+}
+.navigation a:hover::after {
+    transform-origin: left;
+     transform: scaleX(1);
+}
+.navigation .btnlogin_popup{
+    width: 130px;
+    height: 50px;
+    background: transparent;
+    border: 2px solid black;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1.1em;
+    color: white;
+    font-weight: 500;
+    margin-left: 40px;
+    transition: .5s;
+    align-items: end;
+}
+.navigation .btnlogin_popup:hover {
+   background: black; 
+   color:gray;
+}
+
+.content {
+    position: absolute;
+    padding-top: 140px;
+    padding-bottom: 30px;
+
+}
+.heading {
     width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
     gap: 8px;
-}
- 
-.heading {
     color: black;
+
 }
+
  
 .title {
     font-weight: 400;
@@ -336,23 +355,3 @@ header {
         font-size: 19px;
     }
 }
-</style>
-
-<script>
-    let signup = document.querySelector(".signup");
-    let login = document.querySelector(".login");
-    let slider = document.querySelector(".slider");
-    let formSection = document.querySelector(".form-section");
-    
-    signup.addEventListener("click", () => {
-    	slider.classList.add("moveslider");
-    	formSection.classList.add("form-section-move");
-    });
-    
-    login.addEventListener("click", () => {
-    	slider.classList.remove("moveslider");
-    	formSection.classList.remove("form-section-move");
-    });
-
-</script>
-</html>
